--- a/app/views/todolists/show.html.erb
+++ b/app/views/todolists/show.html.erb
@@ -2,6 +2,8 @@
 <p><%= @list.title %></p>
 <h2>本文</h2>
 <p><%= @list.body %></p>
-<%= link_to "編集", edit_todolist_path(@list.id) %>
 <h2>画像</h2>
 <%= attachment_image_tag @list, :image, :fill, 300, 300, format: 'jpeg' %>
+
+<%= link_to "編集", edit_todolist_path(@list.id) %>
+<%= link_to "削除", destroy_todolist_path(@list.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
